README and more cleanup